--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -5,6 +5,11 @@ html {
 }
 
 .container {
+  display: grid;
+  grid-template-columns: repeat(6, 195px);
+  grid-template-rows: repeat(6, auto);
+  column-gap: 10px;
+  row-gap: 10px;
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -18,26 +23,37 @@ html {
   font-weight: bold;
   color: white;
   border-radius: 15px;
+  
 }
 
 .header {
   background-color: #006157;
+  grid-column: 1 / -1;
+
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column: 1 / 3;
+  grid-row: 2 / 5;
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 3 / 7;
+  grid-row: 2 / 3;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-column: 3 / 7;
+  grid-row: 3 / 4;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / -1;
+  grid-row: 5 / 6;
 }
 
 .article p {
